# fatty_scheduler

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs
src/scheduler/: conditions.rs  conditions_container.rs  mod.rs  repetitive_scheduling_builder.rs  scheduled_task.rs  scheduler.rs  scheduling_builder.rs
src/tasks_conditions/: delay_condition.rs  mod.rs  predicate_condition.rs  repetitive_condition.rs  task_condition.rs
src/types/: id.rs  task_id.rs
src/utils/: times.rs
